--- a/build.xml
+++ b/build.xml
@@ -4,36 +4,59 @@
               To include a user specific buildfile here, simply create one in the same
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. -->
-<project basedir="." default="run" name="GenerateGoogleDoc">
+<project basedir="." default="build" name="GenerateGoogleDocV15">
 	<property environment="env" />
-	
-	<property name="ECLIPSE_HOME" value="../../eclipse" />
+	<property name="ECLIPSE_HOME" value="../../../../opt/eclipse/" />
 	<property name="debuglevel" value="source,lines,vars" />
 	<property name="target" value="1.7" />
 	<property name="source" value="1.7" />
-	<property file="test.properties" />
-	<property name="selenium-dir" value="${selenium-jar}" />
-	<path id="seleniumWD.userclasspath">
-		<fileset dir="${selenium-dir}/libs">
-			<include name="*.jar" />
-		</fileset>
-		<pathelement location="${selenium-dir}/selenium-java-2.39.0.jar" />
-		<pathelement location="${selenium-dir}/selenium-java-2.39.0-srcs.jar" />
-	</path>
-	<property name="excel-dir" value="${excel-jar}" />
-	<path id="JAVAEXCEL.userclasspath">
-		<pathelement location="${excel-dir}/jxl.jar" />
-	</path>
-	<path id="GenerateGoogleDoc.classpath">
+	<path id="GenerateGoogleDocV15.classpath">
 		<pathelement location="bin" />
-		<path refid="JAVAEXCEL.userclasspath" />
-		<path refid="seleniumWD.userclasspath" />
+		<pathelement location="lib/excel/jxl.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/apache-mime4j-0.6.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/bsh-1.3.0.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/cglib-nodep-2.1_3.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-codec-1.8.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-collections-3.2.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-exec-1.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-io-2.2.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-jxpath-1.3.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-lang3-3.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/commons-logging-1.1.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/cssparser-0.9.11.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/guava-15.0.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/hamcrest-core-1.3.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/hamcrest-library-1.3.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/htmlunit-2.13.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/htmlunit-core-js-2.13.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/httpclient-4.3.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/httpcore-4.3.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/httpmime-4.3.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/ini4j-0.5.2.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/jcommander-1.29.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/jetty-websocket-8.1.8.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/jna-3.4.0.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/jna-platform-3.4.0.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/json-20080701.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/junit-dep-4.11.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/nekohtml-1.9.19.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/netty-3.5.7.Final.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/operadriver-1.5.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/phantomjsdriver-1.0.4.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/protobuf-java-2.4.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/sac-1.3.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/serializer-2.7.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/testng-6.8.5.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/xalan-2.7.1.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/xercesImpl-2.10.0.jar" />
+		<pathelement location="lib/selenium-2.39.0/libs/xml-apis-1.4.01.jar" />
+		<pathelement location="lib/selenium-2.39.0/selenium-java-2.39.0.jar" />
+		<pathelement location="lib/selenium-2.39.0/selenium-java-2.39.0-srcs.jar" />
 	</path>
 	<target name="init">
 		<mkdir dir="bin" />
 		<copy includeemptydirs="false" todir="bin">
 			<fileset dir="src">
-				<exclude name="**/*.launch" />
 				<exclude name="**/*.java" />
 			</fileset>
 		</copy>
@@ -48,7 +71,7 @@
 		<echo message="${ant.project.name}: ${ant.file}" />
 		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
 			<src path="src" />
-			<classpath refid="GenerateGoogleDoc.classpath" />
+			<classpath refid="GenerateGoogleDocV15.classpath" />
 		</javac>
 	</target>
 	<target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects" />
@@ -65,11 +88,11 @@
 		<property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter" />
 		<antcall target="build" />
 	</target>
-	<target name="Catcher">
+	<target name="DocPanel">
 		<java classname="userinterface.DocPanel" failonerror="true" fork="yes">
-			<classpath refid="GenerateGoogleDoc.classpath" />
+			<classpath refid="GenerateGoogleDocV15.classpath" />
 		</java>
 	</target>
-	<target name="run" depends="Catcher">
+	<target name="run" depends="DocPanel">
 	</target>
 </project>
